# rest-api

./: .gitignore  Dockerfile  docker-compose.yml  init_db.py  pyproject.toml  rmalertsdb.sh
app/: database.py  main.py
